use Kotlin serialization for messages, fix delayed message retries